# DeepAgents

./: .env.example  .gitignore  CLAUDE_CODE_ENHANCEMENT_PLAN.md  DOCUMENTATION_COMPLETE.md  Deep Agents.md  ENHANCED_SUCCESS.md  FEATURE_OVERVIEW.md  GPT5_UPGRADE.md  QUICKSTART.md  README.md  START_HERE.md  deepagents.bat  deepagents_claude_ui.py  plans.md  pyproject.toml  requirements.txt  run_deepagents_ui.py  start_cli.sh  start_live_cli.sh  start_live_deepagents.py  tasks.md  test_claude_ui.py  test_new_features.py
deepagents_cli/: __init__.py  claude_main.py  claude_style_cli.py  claude_ui.py  cli.py  live_cli.py  rich_claude_ui.py  status_bar_ui.py  terminal_ui.py
deepagents_cli/agent/: __init__.py  agent_commands.py  autocomplete.py  claude_code_prompt.py  claude_commands.py  claude_file_tools.py  claude_formatter.py  claude_tools.py  config.py  factory.py  live_ui.py  logging.py  model_commands.py  persistent_memory.py  prompts.py  safety.py  smart_workflows.py  specialized_agents.py  stable_prompt.py  state.py  status_line.py  tools.py  workflow_commands.py
deepagents_cli/analysis/: web_ui_vs_cli_analysis.md
